# paperless-pipeline

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README-FR.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
classifier/: Dockerfile  pyproject.toml
classifier/scripts/: archive.py  archive_digiposte.py  export.py  export_digiposte.py  init_referential.py  mark_exported.py  mark_uploaded.py
classifier/src/filethat/: classifier.py  cli.py  config.py  logging_setup.py  normalizer.py  paperless_client.py  poller.py  prompt.py  referential.py  schemas.py
classifier/src/filethat/llm/: anthropic_client.py  base.py  factory.py  openai_client.py
classifier/src/filethat/prompts/: system_en.md  system_fr.md
classifier/src/filethat/referentials/: correspondents_canonical.yaml  document_types.yaml  tags.yaml
classifier/src/pipeline/: classifier.py  cli.py  config.py  llm_client.py  logging_setup.py  normalizer.py  paperless_client.py  poller.py  prompt.py  referential.py  schemas.py
classifier/src/referentials/: tags.yaml
classifier/tests/: test_normalizer.py  test_referential.py
config/fr-admin/: correspondents.local.yaml.example  correspondents.yaml  document_types.yaml  tags.yaml
examples/export-workflow/: README.md
filethat/: __main__.py  classify.py  cli.py  config.py  eval.py  extract.py  index.py  journal.py  logging_setup.py  normalize.py  organize.py  pipeline.py
filethat/web/: app.py
filethat/web/templates/: index.html  review.html
paperless-ai/: config.yml  prompt.txt
scripts/: export.sh  init_referential.py
tests/: test_classify.py  test_eval.py  test_index.py  test_journal.py  test_normalize.py  test_organize.py  test_pipeline.py
tests/eval/: README.md
tests/fixtures/: README.md
